# flask-api

./: README.md  app.py  pyproject.toml  requirements.txt
data/: users.json
docs/: add.yml  auth.yml  divide.yml  index.yml  multiply.yml  subtract.yml
lib/: auth.py  utils.py
middleware/: auth.py
routes/: add.py  auth.py  divide.py  index.py  multiply.py  subtract.py
