[project]
name = "flask-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "Sindre Gangeskar",email = "sindre.gangeskar@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs (==25.4.0)",
    "blinker (==1.9.0)",
    "cffi (==2.0.0)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "cryptography (==46.0.3)",
    "dotenv (==0.9.9)",
    "flasgger (==0.9.7.1)",
    "flask (==3.1.2)",
    "gunicorn (==23.0.0)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "jsonschema (==4.26.0)",
    "jsonschema-specifications (==2025.9.1)",
    "markupsafe (==3.0.3)",
    "mistune (==3.2.0)",
    "packaging (==25.0)",
    "pycparser (==2.23)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.2.1)",
    "pyyaml (==6.0.3)",
    "referencing (==0.37.0)",
    "rpds-py (==0.30.0)",
    "setuptools (==80.9.0)",
    "six (==1.17.0)",
    "werkzeug (==3.1.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
